changed font and added hover effects

--- a/dashboards.html
+++ b/dashboards.html
@@ -44,7 +44,7 @@
                         <div class="row row-cols-1 row-cols-md-2 g-4">
 
                             <div class="col-md-6 col-sm-12">
-                                <a href="https://graphc.maps.arcgis.com/apps/dashboards/465d9e0cd44247b488b8431a56691417" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
+                                <a href="https://graphc.maps.arcgis.com/apps/dashboards/465d9e0cd44247b488b8431a56691417" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                                     <div class="ratio ratio-16x9">
                                         <img title="CRISPER National Summary Dashboard" src="Assets/Screenshots/NationalSummary_filter.png" class="w-100 h-100 border-bottom border-warning border-4" alt="CRISPER National Summary Dashboard" style="display: block; object-fit: cover; object-position: 50% 50%;">
                                     </div>
@@ -57,7 +57,7 @@
                             </div>
 
                             <div class="col-md-6 col-sm-12">
-                                <a href="https://graphc.maps.arcgis.com/apps/dashboards/74e69c2ab40f41c892a652e95373622c" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
+                                <a href="https://graphc.maps.arcgis.com/apps/dashboards/74e69c2ab40f41c892a652e95373622c" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                                     <div class="ratio ratio-16x9">
                                         <img title="Interactive Mapping Cases By Postcode (NSW ony)" src="Assets/Screenshots/CasesByPostcode_filter.png" alt="Interactive Mapping Cases By Postcode (NSW ony)" class = "border-bottom border-warning border-4">
                                     </div>
@@ -81,7 +81,7 @@
                             </div>
       
                             <div class="col-md-6 col-sm-12">
-                                <a href="https://graphc.maps.arcgis.com/apps/dashboards/743fab0c70204aefa812de611cb7999b" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
+                                <a href="https://graphc.maps.arcgis.com/apps/dashboards/743fab0c70204aefa812de611cb7999b" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                                     <div class="ratio ratio-16x9">
                                         <img title="Interactive Mapping  Tests by Postcode (NSW only) &amp; Contact Tracing Locations" src="Assets/Screenshots/TestsByPostcode_filter.png" class="w-100 h-100 border-bottom border-warning border-4" alt="Interactive Mapping Tests by Postcode (NSW only) &amp; Contact Tracing Locations" style="display: block; object-fit: cover; object-position: 50% 50%;">
                                     </div>
@@ -107,7 +107,7 @@
                             </div>
 
                             <div class="col-md-6 col-sm-12">
-                                <a href="https://graphc.maps.arcgis.com/apps/dashboards/8a59e93e28a54298857e53d83dd158be" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
+                                <a href="https://graphc.maps.arcgis.com/apps/dashboards/8a59e93e28a54298857e53d83dd158be" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                                     <div class="ratio ratio-16x9 ">
                                         <img src="Assets/Screenshots/NSWPHU_filter.png" class = "border-bottom border-warning border-4">
                                     </div>
