--- a/data_engine.html
+++ b/data_engine.html
@@ -82,7 +82,7 @@
                 <div class="col-md">
                     <a href="https://data.crisper.net.au/tables" class="card h-100 my-1 text-decoration-none  border border-0 border-dark text-dark " style="width: 100%;">
                         <div class="card-body text-center">
-                            <span class="fa-stack fa-3x m-4">
+                            <span class="fa-stack fa-3x m-4 hover-grow">
                                 <i class="fa fa-square fa-stack-2x text-dark"></i>
                                 <i class="fas fa-table fa-stack-1x text-warning"></i>
                             </span>
@@ -94,7 +94,7 @@
                 <div class="col-md">
                         <a href="https://data.crisper.net.au/schema" class="card h-100 my-1 text-decoration-none  border border-0 border-dark text-dark" style="width: 100%;">
                             <div class="card-body text-center">
-                                <span class="fa-stack fa-3x m-4">
+                                <span class="fa-stack fa-3x m-4 hover-grow">
                                     <i class="fa fa-square fa-stack-2x text-dark"></i>
                                     <i class="fas fa-code fa-stack-1x text-warning"></i>
                                 </span>
@@ -106,9 +106,9 @@
                 <div class="col-md">
                     <a href="https://data.crisper.net.au/status" class="card h-100 my-1 text-decoration-none  border border-0 border-dark text-dark"  style="width: 100%;">
                         <div class="card-body text-center">
-                            <span class="fa-stack fa-3x m-4">
-                                <i class="fa fa-square fa-stack-2x text-dark"></i>
-                                <i class="far fa-question-circle fa-stack-1x text-warning"></i>
+                            <span class="fa-stack fa-3x m-4 hover-grow">
+                                <i class="fa fa-square fa-stack-2x text-dark "></i>
+                                <i class="far fa-question-circle fa-stack-1x text-warning "></i>
                             </span>
                             <h3 class="card-title">Status</h3>
                         </div>
@@ -118,7 +118,7 @@
                 <div class="col-md">
                     <a href="data_sources.html" class="card h-100 my-1 text-decoration-none  border border-0 border-dark text-dark"  style="width: 100%;">
                         <div class="card-body text-center">
-                            <span class="fa-stack fa-3x m-4">
+                            <span class="fa-stack fa-3x m-4 hover-grow">
                                 <i class="fa fa-square fa-stack-2x text-dark"></i>
                                 <i class="fas fa-search fa-stack-1x text-warning"></i>
                             </span>
