--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <div class="row row-cols-1 row-cols-md-2 g-4">
 
                             <div class="col-md">
-                                    <a href="contact_tracing_map.html" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
+                                    <a href="contact_tracing_map.html" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                                         <div class="ratio ratio-16x9">
                                             <img src="Assets/Contact Tracing_filter.png" class="card-img-top border-bottom border-warning border-4" alt="...">
                                         </div>
@@ -154,7 +154,7 @@
                             </div>
 
                             <div class="col-md">
-                                <a href="automated_alerts.html" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
+                                <a href="automated_alerts.html" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                                     <div class="ratio ratio-16x9">
                                       <img src="Assets/automated_alerts_filter.png" class="card-img-top border-bottom border-warning border-4" alt="...">
                                     </div>
@@ -169,7 +169,7 @@
                             </div>
       
                             <div class="col-md">
-                                <a href="dashboards.html" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
+                                <a href="dashboards.html" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                                     <div class="ratio ratio-16x9">
                                         <img src="Assets/Screenshots/NationalSummary_filter.png" class="card-img-top border-bottom border-warning border-4" alt="...">
                                     </div>
@@ -183,7 +183,7 @@
                             </div>
      
                             <div class="col-md">
-                                <a href="data_engine.html" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
+                                <a href="data_engine.html" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                                     <div class="ratio ratio-16x9">
                                         <img src="Assets/Code_Stock_Photo(From Pexels)_filter.jpg" class="card-img-top border-bottom border-warning border-4" alt="...">
                                     </div>
