--- a/automated_alerts.html
+++ b/automated_alerts.html
@@ -98,7 +98,7 @@
             <div class="row row-cols-1 row-cols-md-3 py-5">
 
                     <div class="col-md text-center my-3">
-                        <a class="btn btn-warning btn-lg col-8" href="/demo" role="button" data-bs-toggle="tooltip" data-bs-placement="bottom" title=" Explore alerts without having to register/login."> <b>
+                        <a class="btn btn-warning btn-lg col-8" href="/alerts_explorper" role="button" data-bs-toggle="tooltip" data-bs-placement="bottom" title=" Explore alerts without having to register/login."> <b>
                                 Explore
                             </b> 
                         </a>
