Changed Feedback button to a simple mailto

--- a/footer.html
+++ b/footer.html
@@ -86,9 +86,11 @@
 
                       
                 <!-- Button trigger modal -->
-                <button type="button" class="btn btn-warning " data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                   Send Us Feedback
-                </button>
+                <a href="mailto:support@crisper.net.au?subject=CRISPER Feedback">
+                    <button type="button" class="btn btn-warning " data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        Send Us Feedback
+                    </button>
+                </a>
 
                 </div>
             </div>
@@ -131,7 +133,7 @@
 
 
     <!-- Modal -->
-    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <!-- <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
@@ -158,4 +160,4 @@
             </div>
         </div>
         </div>
-    </div>
+    </div> -->
