Update ACT scraping site.

--- a/contact_tracing_map.html
+++ b/contact_tracing_map.html
@@ -95,7 +95,8 @@
             To find the most recent, complete and authoritative data, please visit the appropriate health department website for your state or territory:
             <ul>
                 <li>
-                    <a href="https://www.covid19.act.gov.au/news-articles/exposure-locations-in-the-act" target="_blank">
+                    <!-- Replace 20210812 a href="https://www.covid19.act.gov.au/news-articles/exposure-locations-in-the-act" target="_blank" -->
+                    <a href="https://www.covid19.act.gov.au/act-status-and-response/act-covid-19-exposure-locations" target="_blank" -->
                         Australian Capital Territory</a>
                     
                 </li>
