--- a/header.html
+++ b/header.html
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="contact_tracing_map.html"
+                        <a href="exposure_sites.html"
                 class="nav-link">Exposure Sites</a>
                     </li>                
                     <li class="nav-item">
