--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
                                 on cases, testing, and exposure sites in Australia. 
                         </h5>
                         <h3>CRISPER</h3>
-                            <a href="contact_tracing_map.html" class="list-group-item list-group-item-action">Exposure Sites</a>
+                            <a href="exposure_sites.html" class="list-group-item list-group-item-action">Exposure Sites</a>
                             <!-- a href="https://experience.arcgis.com/experience/1606ae83c91e4dc68c95170e7f37e9e9" class="list-group-item list-group-item-action">Smartphone Application Contact Tracing Map</a-->
                             <a href="automated_alerts.html" class="list-group-item list-group-item-action">Automated Alerts</a>
                             <a href="dashboards.html" class="list-group-item list-group-item-action">Other Dashboards</a>
                             <a href="data_engine.html" class="list-group-item list-group-item-action">Data Engine</a>
                             <a href="data_sources.html" class="list-group-item list-group-item-action">Data Sources</a>
-                            <a href="mobile_contact_tracing_map.html" class="list-group-item list-group-item-action">Mobile App</a>
+                            <a href="mobile_exposure_sites.html" class="list-group-item list-group-item-action">Mobile App</a>
                             <a href="about_us.html" class = "list-group-item list-group-item-action">About Us</a>
 		      
                         <br><br>
@@ -136,7 +136,7 @@
                         <div class="row row-cols-1 row-cols-md-2 g-4">
 
                             <div class="col-md">
-                                    <a href="contact_tracing_map.html" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
+                                    <a href="exposure_sites.html" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                                         <div class="ratio ratio-16x9">
                                             <img src="Assets/Contact Tracing_filter.png" class="card-img-top border-bottom border-warning border-4" alt="...">
                                         </div>
