--- a/exposure_sites.html
+++ b/exposure_sites.html
@@ -57,19 +57,28 @@
 
                 <div class="col-md-4 p-5"> 
                     <h1> Exposure Sites </h1>
-                    <br><br> 
-                    <p>The map shows all current contact tracing
-                        alert locations (locations where potential exposure to
-                        infectious COVID-19 cases may have occurred). Zoom in
-                        to your area of interest. The icons can be tapped to
-                        show the actual details. Icons include specific
-                        locations (red points) and transportation (trains,
-                        buses, flights, ferries, etc). Alerts can be filtered
+		  <br><br>
+		  
+                    <p>The map shows all current contact tracing alert
+                        locations, which are locations where a known
+                        COVID-19 positive person attended in the past
+                        30 days. Zoom in to your area of interest. The
+                        icons can be tapped to show the actual
+                        details. Icons include specific locations (red
+                        points) and transportation (trains, buses,
+                        flights, ferries, etc). Alerts can be filtered
                         by date, state, and postcode. Search functions
-		  include
-		  postcode, suburb or address allowing exposure sites
-                        to be easily identified. Tap the crosshair icon to
-                        zoom into your current location. </p>
+                        include postcode, suburb or address allowing
+                        exposure sites to be easily identified. Tap
+                        the crosshair icon to zoom into your current
+                        location. </p>
+
+		  <p><i>As announced at the <a
+		  href="https://youtu.be/ka80OeaUkdk?t=1324" target="_blank">NSW
+		  Government press conference of 17 August 2021</a>
+		  the NSW Department of Health has stopped posting all
+		  exposure sites to "focus the public attention on
+		  where we believe there is a true risk."</i>
                 
                     <p>The Web App was developed with mobile phone capability so users
                         can easily check for new exposure sites and
@@ -90,7 +99,16 @@
     <hr class="col-8 mx-auto text-warning border border-3 border-warning">
 
 
-    <section class="container p-5">
+	<section class="container p-5"> <p>The locations displayed on
+	the map are derived from the address data provided by the
+	Departments of Health in the different jurisdictions. It is
+	sometimes difficult to determine the precise location from the
+	address published. If you find a discrepancy, please let us
+	know by sending email to <a
+	href="mailto:support@crisper.net.au?subject=CRISPER Location Suggestion"
+	target="_blank">support@crisper.net.au</a>.
+
+	
         <p>
             To find the most recent, complete and authoritative data, please visit the appropriate health department website for your state or territory:
             <ul>
