Update links to go direct to statistics

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 
                             <a href="https://www.covid19.act.gov.au/" class="list-group-item list-group-item-action" target="_blank">
                             Australian Capital Territory</a>
-                            <a href="https://www.nsw.gov.au/covid-19" class="list-group-item list-group-item-action" target="_blank">
+                            <a href="https://www.nsw.gov.au/covid-19/find-the-facts-about-covid-19" class="list-group-item list-group-item-action" target="_blank">
                             New South Wales</a>
-                            <a href="https://coronavirus.nt.gov.au/" class="list-group-item list-group-item-action" target="_blank">
+                            <a href="https://coronavirus.nt.gov.au/current-status" class="list-group-item list-group-item-action" target="_blank">
                             Northern Territory</a>
                             <a href="https://www.covid19.qld.gov.au/" class="list-group-item list-group-item-action" target="_blank">
                             Queensland</a>
