--- a/index.html
+++ b/index.html
@@ -97,18 +97,13 @@
 		      
                         <br><br>
 
-                        <h3>Resources</h3>
+                        <!--h3>External Resources</h3>
 
                             <a href="https://www.health.gov.au/news/health-alerts/novel-coronavirus-2019-ncov-health-alert/coronavirus-covid-19-case-numbers-and-statistics" class="list-group-item list-group-item-action" target="_blank">
                                 Australian Department of Health</a>
                             <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" class="list-group-item list-group-item-action" target="_blank">
                                 World Health Organization</a>
-                            <a></a> <!-- to get a final line -->
-
-                        <br><br>
-
-                        <h5> State and Territory Health Departments</h5>
-
+                            <a></a> 
                             <a href="https://www.covid19.act.gov.au/" class="list-group-item list-group-item-action" target="_blank">
                             Australian Capital Territory</a>
                             <a href="https://www.nsw.gov.au/covid-19/find-the-facts-about-covid-19" class="list-group-item list-group-item-action" target="_blank">
@@ -126,7 +121,7 @@
                             <a href="https://www.wa.gov.au/government/covid-19-coronavirus" class="list-group-item list-group-item-action" target="_blank">
                             Western Australia</a>                                               
 
-                            <a></a> <!-- to get a final line -->
+                            <a></a--> <!-- to get a final line -->
 
                     </div>
                 </div>
