Replace nbsp with emsp

--- a/footer.html
+++ b/footer.html
@@ -80,31 +80,31 @@
 		  <small>
 		    <a href="https://www.health.gov.au/news/health-alerts/novel-coronavirus-2019-ncov-health-alert/coronavirus-covid-19-case-numbers-and-statistics"  class = "text-light" target="_blank">
 		  Australian Department of Health</a>
-		  &nbsp;&nbsp;&nbsp;&nbsp;
+		  &emsp;&emsp;
                             <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" class="text-light" target="_blank">
                                 World Health Organization</a>
-		  &nbsp;&nbsp;&nbsp;&nbsp;
+		  &emsp;&emsp;
                              <a href="https://www.covid19.act.gov.au/" class="text-light" target="_blank">
                             Australian Capital Territory</a>
-		  &nbsp;&nbsp;&nbsp;&nbsp;
+		  &emsp;&emsp;
                              <a href="https://www.nsw.gov.au/covid-19/find-the-facts-about-covid-19" class="text-light" target="_blank">
                             New South Wales</a>
-		  &nbsp;&nbsp;&nbsp;&nbsp;
+		  &emsp;&emsp;
                              <a href="https://coronavirus.nt.gov.au/current-status" class="text-light" target="_blank">
                             Northern Territory</a>
-		  &nbsp;&nbsp;&nbsp;&nbsp;
+		  &emsp;&emsp;
                              <a href="https://www.covid19.qld.gov.au/" class="text-light" target="_blank">
                             Queensland</a>
-		  &nbsp;&nbsp;&nbsp;&nbsp;
+		  &emsp;&emsp;
                              <a href="https://www.covid-19.sa.gov.au/" class="text-light" target="_blank">
                             South Australia</a>
-		  &nbsp;&nbsp;&nbsp;&nbsp;
+		  &emsp;&emsp;
                              <a href="https://www.coronavirus.tas.gov.au/" class="text-light" target="_blank">
                              Tasmania</a>
-		  &nbsp;&nbsp;&nbsp;&nbsp;
+		  &emsp;&emsp;
                              <a href="https://www.coronavirus.vic.gov.au/" class="text-light" target="_blank">
                             Victoria</a>
-		  &nbsp;&nbsp;&nbsp;&nbsp;
+		  &emsp;&emsp;
                              <a href="https://www.wa.gov.au/government/covid-19-coronavirus" class="text-light" target="_blank">
                             Western Australia</a>                                               
 
