Added basic Government Resources html

--- a/index.html
+++ b/index.html
@@ -198,18 +198,19 @@
                                       <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                                     </div>
                                 </a>
-                            </div>
-
+                            </div>                            
+                            
                             <div class="col-md">
-                                <a href="government_resources.html" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
+                                <a href="goverment_resources.html" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                                     <div class="ratio ratio-16x9">
                                         <img src="Assets/Australia_Pexels - Copy.jpg" class="card-img-top border-bottom border-warning border-4" alt="...">
                                     </div>
                                     <div class="card-body">
                                       <h5 class="card-title">Government Resources</h5>
                                       <p class="card-text">Official websites and sources for current COVID-19 Status in each State and Territory, 
-                                          other useful resources to keep up to date.</p>
-                                           <br><br> <!--Extra space to make card look proportionate -->
+                                        other useful resources to keep up to date.</p>
+
+                                    <br>
                                       <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                                     </div>
                                 </a>
