added and edited logos from government websites

--- a/goverment_resources.html
+++ b/goverment_resources.html
@@ -44,14 +44,14 @@
     <!-- ---------------------- -->
     <section>
         <div class="container py-5">
-            <h2 class="py-3">Other Useful Resources</h2>
+            <h2 class="py-3">Other Resources</h2>
 
             <div class="row g-4 row-cols-md-3">
 
               <div class="col-md">
                 <a href="ehttps://www.covid19.act.gov.au/" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                     <div class="ratio ratio-16x9">
-                        <img src="Assets/Australia_Pexels - Copy.jpg" class="card-img-top border-bottom border-warning border-4" alt="...">
+                        <img src="Assets/Logos/gov/act.png" class="card-img-top border-bottom border-warning border-4" alt="...">
                     </div>
                     <div class="card-body">
                     <h5 class="card-title text-center lh-base">
@@ -64,7 +64,7 @@
                 <div class="col-md">
                     <a href="https://www.health.nsw.gov.au/" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                         <div class="ratio ratio-16x9">
-                          <img src="Assets/Australia_Pexels - Copy.jpg" class="card-img-top border-bottom border-warning border-4" alt="...">
+                          <img src="Assets/Logos/gov/nsw.png" class="card-img-top border-bottom border-warning border-4" alt="...">
                         </div>
                         <div class="card-body">
                           <h5 class="card-title text-center">New South Wales</h5>
@@ -76,7 +76,7 @@
                 <div class="col-md">
                     <a href="https://coronavirus.nt.gov.au/" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                         <div class="ratio ratio-16x9">
-                            <img src="Assets/Australia_Pexels - Copy.jpg" class="card-img-top border-bottom border-warning border-4" alt="...">
+                            <img src="Assets/Logos/gov/nt.gif" class="card-img-top border-bottom border-warning border-4" alt="...">
                         </div>
                         <div class="card-body">
                           <h5 class="card-title text-center">Northern Territory</h5>
@@ -88,7 +88,7 @@
                 <div class="col-md">
                     <a href="https://www.covid19.qld.gov.au/" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                         <div class="ratio ratio-16x9">
-                            <img src="Assets/Australia_Pexels - Copy.jpg" class="card-img-top border-bottom border-warning border-4" alt="...">
+                            <img src="Assets/Logos/gov/qld.png" class="card-img-top border-bottom border-warning border-4" alt="...">
                         </div>
                         <div class="card-body">
                           <h5 class="card-title text-center">Queensland</h5>
@@ -100,7 +100,7 @@
                 <div class="col-md">
                     <a href="https://www.covid-19.sa.gov.au/" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                         <div class="ratio ratio-16x9">
-                            <img src="Assets/Australia_Pexels - Copy.jpg" class="card-img-top border-bottom border-warning border-4" alt="...">
+                            <img src="Assets/Logos/gov/sa.png" class="card-img-top border-bottom border-warning border-4" alt="...">
                         </div>
                         <div class="card-body">
                           <h5 class="card-title text-center">South Australia</h5>
@@ -114,7 +114,7 @@
                 <div class="col-md">
                   <a href="https://www.coronavirus.tas.gov.au/" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                       <div class="ratio ratio-16x9">
-                          <img src="Assets/Australia_Pexels - Copy.jpg" class="card-img-top border-bottom border-warning border-4" alt="...">
+                          <img src="Assets/Logos/gov/tas.png" class="card-img-top border-bottom border-warning border-4" alt="...">
                       </div>
                       <div class="card-body">
                         <h5 class="card-title text-center">Tasmania</h5>
@@ -128,7 +128,7 @@
                 <div class="col-md">
                   <a href="https://www.coronavirus.vic.gov.au/" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                       <div class="ratio ratio-16x9">
-                          <img src="Assets/Australia_Pexels - Copy.jpg" class="card-img-top border-bottom border-warning border-4" alt="...">
+                          <img src="Assets/Logos/gov/vic.png" class="card-img-top border-bottom border-warning border-4" alt="...">
                       </div>
                       <div class="card-body">
                         <h5 class="card-title text-center">Victoria</h5>
@@ -142,7 +142,7 @@
                 <div class="col-md">
                   <a href="https://www.wa.gov.au/government/covid-19-coronavirus" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                       <div class="ratio ratio-16x9">
-                          <img src="Assets/Australia_Pexels - Copy.jpg" class="card-img-top border-bottom border-warning border-4" alt="...">
+                          <img src="Assets/Logos/gov/wa.png" class="card-img-top border-bottom border-warning border-4" alt="...">
                       </div>
                       <div class="card-body">
                         <h5 class="card-title text-center">Western Australia</h5>
@@ -156,7 +156,7 @@
               <div class="col-md">
                 <a href="https://www.health.gov.au/news/health-alerts/novel-coronavirus-2019-ncov-health-alert/coronavirus-covid-19-case-numbers-and-statistics" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                     <div class="ratio ratio-16x9">
-                        <img src="Assets/Australia_Pexels - Copy.jpg" class="card-img-top border-bottom border-warning border-4" alt="...">
+                        <img src="Assets/Logos/gov/aus.png" class="card-img-top border-bottom border-warning border-4" alt="...">
                     </div>
                     <div class="card-body">
                       <h5 class="card-title text-center">Australian Government</h5>
@@ -170,7 +170,7 @@
               <div class="col-md">
                 <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" class="card h-100 my-1 text-decoration-none text-dark hover-shadow" style="width: 100%;">
                     <div class="ratio ratio-16x9">
-                        <img src="Assets/Australia_Pexels - Copy.jpg" class="card-img-top border-bottom border-warning border-4" alt="...">
+                        <img src="Assets/Logos/gov/who.png" class="card-img-top border-bottom border-warning border-4" alt="...">
                     </div>
                     <div class="card-body">
                       <h5 class="card-title text-center">World Health Organisation</h5>
