--- a/goverment_resources.html
+++ b/goverment_resources.html
@@ -46,11 +46,11 @@
         <div class="container py-5">
             <h2 class="py-3">Other Useful Resources</h2>
 
-            <div class="row g-4">
+            <div class="row g-5">
 
                 
                     <div class="col-md-4 col-sm-12">
-                            <a href="https://www.covid19.act.gov.au/" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
+                            <a href="https://www.covid19.act.gov.au/" target="_blank" class="btn btn-dark btn-lg py-3" style="width: 100%;">
                                 <!-- <div class="ratio ratio-16x9">
                                     <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                                 </div> -->
@@ -61,7 +61,7 @@
                             </a>
                     </div>
                     <div class="col-md-4 col-sm-12">
-                        <a href="https://www.health.nsw.gov.au/" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
+                        <a href="https://www.health.nsw.gov.au/" target="_blank" class="btn btn-dark btn-lg  py-3" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
                                 <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
@@ -72,7 +72,7 @@
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-12">
-                        <a href="https://coronavirus.nt.gov.au/" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
+                        <a href="https://coronavirus.nt.gov.au/" target="_blank" class="btn btn-dark btn-lg  py-3" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
                                 <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
@@ -83,7 +83,7 @@
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-12">
-                        <a href="https://www.covid19.qld.gov.au/" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
+                        <a href="https://www.covid19.qld.gov.au/" target="_blank" class="btn btn-dark btn-lg  py-3" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
                                 <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
@@ -94,7 +94,7 @@
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-12">
-                        <a href="https://www.covid-19.sa.gov.au/" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
+                        <a href="https://www.covid-19.sa.gov.au/" target="_blank" class="btn btn-dark btn-lg  py-3" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
                                 <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
@@ -105,7 +105,7 @@
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-12">
-                        <a href="https://www.coronavirus.tas.gov.au/" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
+                        <a href="https://www.coronavirus.tas.gov.au/" target="_blank" class="btn btn-dark btn-lg  py-3" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
                                 <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
@@ -116,7 +116,7 @@
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-12">
-                        <a href="https://www.coronavirus.vic.gov.au/" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
+                        <a href="https://www.coronavirus.vic.gov.au/" target="_blank" class="btn btn-dark btn-lg  py-3" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
                                 <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
@@ -127,7 +127,7 @@
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-12">
-                        <a href="https://www.wa.gov.au/government/covid-19-coronavirus" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
+                        <a href="https://www.wa.gov.au/government/covid-19-coronavirus" target="_blank" class="btn btn-dark btn-lg  py-3" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
                                 <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
@@ -140,7 +140,7 @@
                     </div>
 
                     <div class="col-md-4 col-sm-12">
-                        <a href="https://www.health.gov.au/news/health-alerts/novel-coronavirus-2019-ncov-health-alert/coronavirus-covid-19-case-numbers-and-statistics" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
+                        <a href="https://www.health.gov.au/news/health-alerts/novel-coronavirus-2019-ncov-health-alert/coronavirus-covid-19-case-numbers-and-statistics" target="_blank" class="btn btn-dark btn-lg  py-3" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
                                 <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
@@ -153,7 +153,7 @@
                     </div>
 
                     <div class="col-md-4 col-sm-12">
-                      <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
+                      <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" target="_blank" class="btn btn-dark btn-lg  py-3" style="width: 100%;">
                           <!-- <div class="ratio ratio-16x9">
                               <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                           </div> -->
