--- a/exposure_sites.html
+++ b/exposure_sites.html
@@ -46,7 +46,17 @@
                     <div class="embed-responsive embed-responsive-16by9 p-md-5">
                         <iframe class="embed-responsive-item border border-dark border-4" src="https://mobile.crisper.net.au"
                         title="Exposure Sites" height="900px" width="100%"></iframe>
+
+
+                        <a  href="https://mobile.crisper.net.au/" type="button" class="btn btn-dark my-2">Fullscreen</a>
+                        <a  href="#" type="button" class="btn btn-dark my-2 mx-md-3">Add to Home Screen</a>
+     
+                    
+
                     </div>
+
+
+  
                     <!-- <iframe
                         src="https://mobile.crisper.net.au"
                         title="Contact Tracing Map"
